# cv-creator

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  constraints.txt  deploy.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
src/cv_creator/: __init__.py  __main__.py  cli.py  config.py
src/cv_creator/agents/: __init__.py  company_extractor.py  cover_letter_writer.py  cv_reader.py  cv_writer.py  orchestrator.py  pdf_generator.py  researcher.py  summarizer.py  validator.py
src/cv_creator/static/: app.js  detail.html  detail.js  i18n.js  index.html  login.html  login.js  style.css
src/cv_creator/templates/: cv_template.html
src/cv_creator/tools/: __init__.py  docx_writer.py  pdf_reader.py  pdf_writer.py  web_search.py
src/cv_creator/web/: __init__.py  app.py  database.py  models.py  routes.py  run.py  schemas.py  worker.py
tests/: __init__.py  test_cli.py  test_docx_writer.py  test_orchestrator.py  test_tools.py  test_validator.py  test_web_api.py
