[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cv-creator"
version = "0.2.0"
description = "Multi-agent CLI application to optimize CVs based on job descriptions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agent-framework",
    "azure-identity>=1.15.0",
    "pdfplumber>=0.11.0",
    "weasyprint>=62.0",
    "python-dotenv>=1.0.0",
    "tavily-python>=0.5.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.scripts]
cv-creator = "cv_creator.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cv_creator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/cv_creator/agents/*.py" = ["E501"]
