[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cv-creator"
version = "0.2.0"
description = "Multi-agent CLI application to optimize CVs based on job descriptions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "agent-framework",
    "azure-identity>=1.15.0",
    "pdfplumber>=0.11.0",
    "weasyprint>=62.0",
    "python-dotenv>=1.0.0",
    "tavily-python>=0.5.0",
    "python-docx>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
]

[project.scripts]
cv-creator = "cv_creator.cli:main"
cv-creator-web = "cv_creator.web.run:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cv_creator"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/cv_creator/agents/*.py" = ["E501"]
